data/test/type_check/fail/issue_20c.v
wire x;
// Slice into a scalar value
assign x[0] = 1;
